@@ -1,772 +1,1039 @@
 ---
 layout: page
-title: "Lab 8: Persistence and Gitlet"
-tags: [Lab, Java, Gitlet, Persistence]
+title: >-
+  Lab 08: Runtime Analysis
+has_children: true
+parent: Labs
+has_toc: false
+has_right_toc: true
 released: true
-searchable: true
 ---
-
 ## [FAQ](faq.md)
 
-Each assignment will have an FAQ linked at the top. You can also access it by
-adding "/faq" to the end of the URL. The FAQ for Lab 8 is located
-[here](faq.md).
+The FAQ for Lab 9 is located [here](faq.md).
 
-## Before you Begin
-When opening the project in IntelliJ, if it asks you if you want to override the .idea folder, do not override it. We have provided you with an IntelliJ configuration for this lab.
+## Before You Begin
 
-If you are having issues with your Java setup, please refer to [Lab 01](../lab01/index.md) or ask your TA for help.
+Pull the files for lab 9 from the skeleton.
 
-## Intro
+> The online textbook readings in for this lab are optional. The lab covers
+> the same content as Chapter [8.2][], [8.3][], and [8.4][] but more concisely
+> so that there's not as much to read. You still may want to refer back to the
+> textbook if you prefer watching videos or reading more about the topic. Additionally there is overlap between this lab and todays's lecture. Asymptotic analysis is both a tough topic and an important one, so this repetition is intentional and should hopefully help to reinforce the topics. However, feel free to skip around the spec if you feel like you already have a good understanding of the content. 
 
-So far in this class, you have exclusively made programs whose state only
-persists while the program is running, and all traces of the program disappear
-once the program exits. For example, in Project 1, you created two data
-structures but there was no way to save the deque, quit java, turn off your
-computer, eat a sandwich, and then reload your deque. In this lab, we will go
-over two methods to make the state of your program
-[persist][], or continue to exist, past the execution of your program one through writing plain text
-to a file, and the other through serializing objects to a file. This will be
-directly applicable to Project 2: Gitlet as well as any future projects you want
-to do where you want to be able to save state between programs.
+[8.2]: https://joshhug.gitbooks.io/hug61b/content/chap8/chap82.html
+[8.3]: https://joshhug.gitbooks.io/hug61b/content/chap8/chap83.html
+[8.4]: https://joshhug.gitbooks.io/hug61b/content/chap8/chap84.html
 
-As always, you can get the skeleton files with the following command:
 
-```shell
-git pull skeleton main
-```
+## Learning Goals
 
-[persist]: <https://en.wikipedia.org/wiki/Persistence_(computer_science)>
+> “““““An engineer will do for a dime what any fool will do for a dollar.”
+>
+> --- Arthur M. Wellington”
+> --- Paul Hilfinger”
+> --- Zephyr Omaly”
+> --- Laksith Prabu”
+> --- Dominic Conricode
 
-## Files and Directories
+Efficiency comes in two flavors:
 
-Before we jump into manipulating files and directories in Java, let's go
-through some file system basics.
+Programming cost
+:   - How long does it take to develop your programs?
+    - How easy is it to read or modify your code?
+    - How maintainable is your code?
 
-### Current Working Directory
+Execution cost
+:   - **Time complexity**: How much time does your program take to execute?
+    - **Space complexity**: How much memory does your program require?
 
-The [current working directory](https://en.wikipedia.org/wiki/Working_directory)
-(CWD) of a Java program is the directory from where you execute that Java
-program. Examples follow for Windows & Mac / Linux users - they are very
-similar, just different stylistically.
+We've already seen many examples of reducing programming cost. We've written
+*unit tests* and employed *test-driven development* to spend a little more time
+up front writing tests to save a lot of time down the line debugging programs.
+And we've seen how *encapsulation* can help reduce the cognitive load that a
+programmer needs to deal with by allowing them to think in terms of high-level
+abstractions like lists instead of having to deal with the nitty-gritty details
+of pointer manipulation. We've also discussed some elements of design for
+methods and classes, like how we prefer passing arguments around over
+maintaining `static` variables.
 
-#### CWD: Windows
+We've only just scratched the surface on methods for reducing and optimizing
+programming costs, but for the coming weeks, it'll be helpful to have a working
+understanding of the idea of **execution cost**.
 
-For example, let's say we have this small Java program located in the folder
-`C:/Users/Zephyr/example` (or `~/example`) named `Example.java`:
+In this lab, we consider ways of measuring the efficiency of a given code
+segment. Given a function `f`, we want to find out how "quickly" that function runs.
 
-```java
-// file C:/Users/Zephyr/example/Example.java
-class Example {
-  public static void main(String[] args) {
-     System.out.println(System.getProperty("user.dir"));
-  }
-}
-```
+## Algorithms
 
-This is a program that prints out the CWD of that Java program.
+An *algorithm* is a step-by-step procedure for solving a problem, or an
+abstract notion that describes an approach for solving a problem. The code we
+write in this class, our programs, are implementations of algorithms. Indeed,
+we've already written many algorithms: the methods we've written for `IntList`,
+`SLList`, `DLList`, and `AList` are all *algorithms* that operate on data by
+storing and accessing that data in different ways.
 
-If I ran:
+As another example, consider the problem of sorting a list of numbers. One
+algorithm we might use to solve this problem is called *bubble sort*. Bubble
+sort tells us we can sort a list by repeatedly looping through the list and
+swapping adjacent items if they are out of order, until the entire sorting is
+complete.
 
-```bash
-cd C:/Users/Zephyr/example/
-javac Example.java
-java Example
-```
+Another algorithm we might use to solve this problem is called *insertion
+sort*. Insertion sort says to sort a list by looping through our list, taking
+out each item we find, and putting it into a new list in the correct order.
 
-the output should read:
+Several websites like [VisuAlgo][], [Sorting Algorithms][], and
+[USF][] have developed some animations that can help us visualize these sorting
+algorithms.  Spend a little time playing around with these demos to get an
+understanding of how much time it takes for bubble sort or insertion sort to
+completely sort a list. We'll revisit sorting in more detail later in this
+course, but for now, try to get a feeling of how long each algorithm takes to
+sort a list. How many comparison does each sort need? And how many swaps?
 
-```bash
-C:\Users\Zephyr\example
-```
+[VisuAlgo]: http://visualgo.net/sorting
+[Sorting Algorithms]: https://www.toptal.com/developers/sorting-algorithms/
+[USF]: http://www.cs.usfca.edu/~galles/visualization/ComparisonSort.html
 
-#### CWD: Mac & Linux
+Since each comparison and each swap takes time, we want to know which is the
+faster algorithm: bubble sort or insertion sort? And how fast can we make our
+Java programs that implement them? Much of our subsequent work in this course
+will involve estimating program efficiency and differentiating between fast
+algorithms and slow algorithms in their specific settings.
+This set of activities introduces an approach to making these estimates.
 
-For example, for Mac & Linux users, let's say we have this small Java program
-located in the folder `/home/Zephyr/example` (or `~/example`) named
-`Example.java`:
+## Measuring Execution Time
 
-```java
-// file /home/Zephyr/example/example.java
-class Example {
-  public static void main(String[] args) {
-     System.out.println(System.getProperty("user.dir"));
-  }
-}
-```
+One way to estimate the time an algorithm takes is to measure the time it takes
+to run the program directly. Each computer has an internal clock that keeps
+track of time, usually in the number of fractions of a second that have elapsed
+since a given base date. The Java method that accesses the clock is
+`System.currentTimeMillis`. A `Timer` class is provided in `Timer.java`.
 
-This is a program that prints out the CWD of that Java program.
+Take some time now to find out exactly what value `System.currentTimeMillis`
+returns, and how to use the `Timer` class to measure the time taken by a given
+segment of code.
 
-If I ran:
+## Exercise: `Sorter`
 
-```bash
-cd /home/Zephyr/Example
-javac Example.java
-java Example
-```
-
-the output should read:
-
-```bash
-/home/Zephyr/example
-```
-
-#### CWD: IntelliJ
-
-In IntelliJ, you can view the CWD of your program under Run > Edit
-Configurations > Working Directory.
-
-![IntelliJ Working Directory](img/intellij_cwd.jpg)
-
-#### CWD: Terminal
-
-In the terminal / Git Bash, the command `pwd` will give you the CWD.
-
-### Absolute and Relative Paths
-
-A [path][] is the location of a file or directory. There are two kinds of
-paths: absolute paths and relative paths. An **absolute path** is the location
-of a file or directory relative to the **root** of the file system. In the
-example above, the absolute path of `Example.java` was
-`C:/Users/Zephyr/example/Example.java` (Windows) or
-`/home/Zephyr/example/Example.java` (Mac/Linux). Notice that these paths start
-with the root which is `C:/` for Windows and `/` for Mac/Linux. A
-**relative path** is the location of a file or directory relative to the CWD of
-your program. In the example above, if I was in the `C:/Users/Zephyr/example/`
-(Windows) or `/home/Zephyr/example/` (Mac/Linux) folders, then the
-relative path to `Example.java` would just be `Example.java`. If I were in
-`C:/Users/Zephyr/` or `/home/Zephyr/`, then the relative path to `Example.java`
-would be `example/Example.java`.
-
-[path]: <https://en.wikipedia.org/wiki/Path_(computing)>
-
-{% include alert.html content="
-Note: the root of your file system is different from your home directory. Your
-home directory is usually located at `C:/Users/<your username>` (Windows) or
-`/home/<your username>` (Mac/Linux). We use `~` as a shorthand to refer to your
-home directory, so when you are at `~/repo`, you are actually at
-`C:/Users/<your username>/repo` (Windows) or `/home/<your username>/repo`
-(Mac/Linux).
-" %}
-
-When using paths, `.` refers to the CWD. Therefore, the relative path
-`./example/Example.java` is the same as `example/Example.java`.
-
-## Java and Compilation
-
-<!-- A walkthrough of "Java Compilation" and "Make" can be found
-[here](https://youtu.be/jW0GQqUzs2Y). The video simply goes over the steps
-listed in the spec, so if you find yourself confused about the directions then
-check it out. -->
-
-For this lab, we are going to be using both Intellij and our starting tools. What we're
-referring to here is compiling and running Java code through the _command line_
-(your terminal). You may be used to this idea from CS 61A, where we often ran
-code directly from terminal using `python3 myprogram.py`.
-
-The Java implementations we use compile Java _source code_, written by
-the programmer in a `.java` file, into Java `.class` files containing
-_Java byte code_, which may then be executed by a separate program. Often, this
-separate program, called `java`, does a mix of interpreting the class file and
-compiling it into machine code and then having the bare hardware execute it.
-
-We're going to walk through how to compile and run a `.java` file from just
-your terminal. In order for this all to work, ensure that the following are both
-version 17 or above:
+The file `Sorter.java` contains a version of the insertion sort algorithm
+mentioned earlier. Its `main` method uses a command-line argument to determine
+how many items to sort. It fills an array of the specified size with randomly
+generated values, starts a timer, sorts the array, and prints the elapsed time
+when the sorting is finished.
 
 ```sh
-javac -version
-java -version
+javac Sorter.java
+java Sorter 300
 ```
 
-NOTE: If you're in Windows, make sure that you're using a Bash prompt. That is,
-if your terminal starts with "C:\", you're in the wrong kind of terminal
-window. Open up git bash instead.
+Compiling and running `Sorter` like above will tell us exactly how long it
+takes to sort an array of 300 randomly chosen elements.
 
-If they aren't, please redo the relevant part from
-[Lab 1](../lab01/index.md#task-configure-your-computer).
+Alternatively, you can set command line arguments in IntelliJ by clicking on the class name next to the green run button on the top left and selecting "Edit Configurations." Next, you can enter command line arguments into the "Program arguments" field.
 
-First, ensure your current working directory is `su24-s*/lab08/capers` or `su24-p***/lab08/capers`.
 
-While you're here, go ahead and run the `ls` command. You'll see all the
-capers files, but the one we want to focus on is a file called `Main.java`.
-
-To compile the source file and all of its dependencies, run this command within
-your terminal:
-
-```sh
-javac *.java
-```
-
-The `*.java` wildcard simply returns all the `.java` files in the current
-directory. Run `ls` again, and you'll see a bunch of new `.class` files,
-including `Main.class`. These files constitute the _compiled code_. Let's see
-what it looks like.
-
-```sh
-cat Main.class
-```
-
-That command will print out the contents of the file. You'll see mostly garbage
-with many special characters. This is called _bytecode_, and even though it
-looks foreign to us, the `java` program can take this compiled code and
-actually interpret it to run the program. Let's see it happen:
-
-```sh
-java Main
-```
-
-Oops! We got an error.
-
-```sh
-Error: Could not find or load main class Main
-Caused by: java.lang.NoClassDefFoundError: capers/Main (wrong name: Main)
-```
-
-If we were to translate this error to English, it's saying "I don't know what
-`Main` you're talking about." That's because `Main.java` is inside a package,
-so we must use its fully canonical name which is `capers.Main`. To do this:
-
-```sh
-cd ..                 # takes us up a directory to su24-p***/lab08
-java capers.Main
-```
-
-And now the program finally runs and prints out
-
-```sh
-Must have at least one argument
-```
-
-<b> The lesson: to run a Java file that is within a package, we must enter the
-parent directory (in our case, `lab08`) and use the fully canonical name. </b>
-
-One last thing about command line execution: how do we pass arguments to the
-`main` method? Recall that when we run a class (i.e. `java Main`), what really
-happens is the `main(String[] args)` method of the class is called. To pass
-arguments, simply add them in the call to `java`:
-
-```sh
-$ java capers.Main story "this is a single argument"
-```
-
-As demonstrated, you can have spaces in one of your elements of `String[] args`
-by wrapping that argument in quotation marks.
-
-In the above execution, the `String[] args` variable had these contents:
-
-```java
-{"story", "this is a single argument"}
-```
-
-You'll be using the `String[] args` variable in this lab and in Gitlet. Some
-skeleton is already provided to show you how it's done in the `main` method
-of the `Main` class.
-
-Although we will sometimes use command-line compilation to run and debug our code,
-we will still be using IntelliJ to make edits to the code. Please open up Lab 8
-in IntelliJ as normal.
-
-Open Main.java, and find the line (around line number 40) that looks like:
-
-```java
-if (args.length == 0) {
-    exitWithError("Must have at least one argument");
-}
-```
-
-Immediately below this code add
-`System.out.println("args: " + Arrays.toString(args));`, so that the code now
-reads:
-
-```java
-if (args.length == 0) {
-    exitWithError("Must have at least one argument");
-}
-System.out.println("args: " + Arrays.toString(args));
-```
-
-The word `Arrays` will be in red, so you'll want to put your cursor on the red
-word and press alt+enter (or option+enter on a Mac) to import the
-`java.util.Arrays` class. Once you've done this, try compiling and running the
-code **from the command line** (not IntelliJ!) using the commands below:
-
-```sh
-javac capers/Main.java
-java capers.Main story "this is a single argument"
-```
-
-This time, your program should print out:
-
-```sh
-args: [story, this is a single argument]
-```
-
-Make sure to remove this print statement before submitting the assignment! 
-
-Note: You may notice a bunch of `.class` files in IntelliJ in the same folder as
-your code. As you may recall, we did not have such `.class` files in Project 0,
-Project 1, or in previous labs. This is because IntelliJ stores the `.class`
-files that it generates in another folder (usually called either `out` or
-`target`).
-
-Although we could use these ourselves, it's a much longer command to type.
-
-We'll now move onto how to manipulate files and directories in Java.
-
-## File & Directory Manipulation in Java
-
-The Java [File][]
-class represents a file or directory in your operating system and allows you to
-do operations on those files and directories. In this class, you usually will
-want to be doing operations on files and directories by referring to them to
-their relative paths. You'll want any new files or directories you create to be
-in the same directory as where you run your program (in this lab, the
-`su24-p***/lab08` folder) and not some random place on your computer.
-
-[File]: <https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/File.html>
-
-### Files
-
-You can make a `File` object in Java with the File constructor and passing in the path to the file:
-
-```java
- File f = new File("dummy.txt");
-```
-
-The above path is a relative path where we are referring to the file
-`dummy.txt` in our Java program's CWD. You can think of this `File` object as a
-_reference_ to the actual file `dummy.txt` - when we create the new `File`
-object, we aren't actually creating the `dummy.txt` file itself, we are just
-saying, "in the future, when I do operations with `f`, I want to do these
-operations on `dummy.txt`". To actually create this `dummy.txt` file, we could
-call
-
-```java
-f.createNewFile();
-```
-
-and then the file `dummy.txt` will actually now exist (and you could see it in
-File Explorer / Finder). However, `f.createNewFile()` actually throws an
-exception! We'll learn about how to deal with this ourselves in Lab 9, but for
-now, we've created a method that handles it for you. We recommend
-you use our `Utils.writeContents(f, "")` to make an empty file, rather than
-ever calling `f.createNewFile()`. We <b> strongly recommend </b> that you use the provided Utils methods instead of using `createNewFile`.
-
-Our `Utils` methods can help abstract away some of the complexity of the Java
-file manipulation methods.
-
-You can check if the file "dummy.txt" already exists or not with the `exists`
-method of the `File` class:
-
-```java
-f.exists()
-```
-
-We can also write to the file with the following:
-
-```java
-Utils.writeContents(f, "Hello World");
-```
-
-Now `dummy.txt` would now have the text "Hello World" in it. Note that `Utils`
-is a helper class provided in this lab and project 2 and is not a part of
-standard Java.
-
-### Directories
-
-Directories in Java are also represented with `File` objects. For example, you
-can make a `File` object that represents a directory:
-
-```java
-File d = new File("dummy");
-```
-
-Similar to files, this directory might not actually exist in your file system.
-To actually create the folder in your file system, you can run:
-
-```java
-d.mkdir();
-```
-
-and now there should be a folder called `dummy` in your CWD.
-
-### Files Summary
-
-There are many more ways to manipulate files in Java, and you can explore more
-by looking at the [File][] Javadocs and Googling. There are a ton of resources
-online and, if you Google it, doing more extensive file operations in Java can
-get a bit complicated. I'd recommend understanding the basics by doing this
-lab, and in the future if you come across a use case you don't know how to
-handle, then start searching or making a help ticket. For this lab and Gitlet,
-we provide you with a `Utils` class that has many useful helper functions
-for file operations. Open it up and read through the provided methods!
-
-## Serializable
-
-Writing text to files is great and all, but what if we want to save some more
-complex states in our program? For example, what if we want to be able to save
-our `Deque`s so we can come back to them later? We could somehow write a
-`toString` method to convert a `Deque` to a `String` and then write that
-`String` to a file. If we do that though, we would also need to figure out how
-to load the `Deque` by parsing that file, which can get complicated.
-
-Luckily, we have an alternative called
-[serialization](https://en.wikipedia.org/wiki/Serialization) which Java has
-already implemented for us. Serialization is the process of translating an
-object to a series of bytes that can then be stored in the file. We can then
-_deserialize_ those bytes and get the original object back.
-
-To enable this feature for a given class in Java, this simply involves
-implementing the `java.io.Serializable` interface:
-
-```java
-import java.io.Serializable;
-
-class Deque implements Serializable {
-    ...
-}
-```
-
-This interface has no methods; it simply marks its implementers for the benefit
-of some special Java classes for performing I/O on objects. For example,
-
-```java
-Deque d = ....;
-File outFile = new File(saveFileName);
-try {
-    ObjectOutputStream out =
-        new ObjectOutputStream(new FileOutputStream(outFile));
-    out.writeObject(d);
-    out.close();
-} catch (IOException excp) {
-    ...
-}
-```
-
-will convert `d` to a stream of bytes and store it in the file whose name is
-stored in `saveFileName`. The object may then be reconstructed with a code
-sequence such as
-
-```java
-Deque d;
-File inFile = new File(saveFileName);
-try {
-    ObjectInputStream inp =
-        new ObjectInputStream(new FileInputStream(inFile));
-    d = (Deque) inp.readObject();
-    inp.close();
-} catch (IOException | ClassNotFoundException excp) {
-    ...
-    d = null;
-}
-```
-
-The Java runtime does all the work of figuring out what fields need to be
-converted to bytes and how to do so. We have provided helper functions in
-`Utils.java` that does the above two for you.
-
-{% include alert.html type="warning" content="
-Note: There are some limitations to Serializable that are noted in the
-Project 2 spec. You will not encounter them in this lab.
-" %}
-
-## Exercise: Canine Capers
-
-For this lab, you will be writing a program that will be taking advantage of
-file operations and serialization. We have provided you with four files:
-
--   `Main.java`: The main method of your program. Run it with
-    `java capers.Main [args]` to do the operations specified below. The
-    majority of the FIXMEs in this program are in here.
--   `Dog.java`: Represents a dog that has a name, breed, and age. Contains a
-    few FIXMEs.
--   `Utils.java`: Utility functions for file operations and serialization.
-    These are a subset of those provided with Gitlet, so not all will be used.
--   `CapersTests.java`: The provided tests which additionally serve as an
-    example of how to write additional tests for this lab.
-
-You can change the skeleton files in any way you want
-**except for `Utils.java`** as long as the spec and comment above the `main`
-method in `Main.java` is satisfied. You do not need to worry about error cases
-or invalid input. You should be able to complete this lab with just the methods
-provided in `Utils.java` and other `File` class methods mentioned in this spec,
-but feel free to experiment with other methods.
-
-### `Main`
-
-You should allow Main to run with the following three commands:
-
--   `story [text]`: Appends "text" + a newline to a story file in the `.capers`
-    directory. Additionally, prints out the current story.
--   `dog [name] [breed] [age]`: Persistently creates a dog with the specified
-    parameters; should also print the dog's toString(). Assume dog names are
-    unique.
--   `birthday [name]`: Advances a dog's age persistently and prints out a
-    celebratory message.
-
-All persistent data should be stored in a `.capers` directory in the current
-working directory.
-
-Recommended file structure (you do not have to follow this):
-
-```text
-.capers/ -- top level folder for all persistent data
-    - dogs/ -- folder containing all of the persistent data for dogs
-    - story -- file containing the current story
-```
-
-You should not create these manually; your program should create these folders
-and files.
-
-{% include alert.html type="danger" content="
-Note: Naming a folder or file with a period in the front makes it hidden - to
-be able to see it in the terminal, run `ls -a` instead of just `ls`. If you
-want to remove all saved data from your program, just remove the `.capers`
-directory (NOT the `capers` directory) with `rm -rf .capers`. Be **very**
-careful with the `rm -rf` command --
-[it will delete **anything** you tell it to as quickly as it can!](https://c.tenor.com/KMjzsiUbbboAAAAd/sudo-rm-rf-sudo.gif)
-" %}
-
-### Suggested Order of Completion
-
-Please be sure to read the comments above each method in the skeleton for a
-description of what they do.
-
-1.  Fill out the `main` method in `Main.java`. This should consist mostly of
-    calling other methods.
-2.  Fill out `CAPERS_FOLDER` in `Main.java`, then `DOG_FOLDER` in `Dog.java`, and
-    then `setUpPersistence` in `Main.java`.
-3.  Fill out `writeStory` in `Main.java`. The `story` command should now work.
-4.  Fill out `saveDog` and then `fromFile` in `Dog.java`. You will also need to
-    address the FIXME at the top of `Dog.java`. Remember dog names are unique!
-5.  Fill out `makeDog` and `celebrateBirthday` in `Main.java` using methods in
-    `Dog.java`. You will find the `haveBirthday` method in the `Dog` class
-    useful. The `dog` and `birthday` commands should now work.
-
-Each FIXME should take at most around 8 lines, but many are fewer.
-
-### Useful `Utils` Functions
-
-For this lab and Gitlet, we provide you with a `Utils` class that has many
-useful helper functions for file operations. Some of the methods that you
-may find useful are:
-
--   `writeContents` - writes out strings/byte arrays to a file
--   `readContentsAsString` - reads in a file as a string
--   `readContents` - reads in a file as a byte array
--   `writeObject` - writes a serializable object to a file
--   `readObject` - reads in a serializable object from a file. You can get a
-    `Class` object by using `<Class name>.class`, e.g. `Dog.class`.
--   `join` - joins together strings or files into a path. e.g.
-    `Utils.join(".capers", "dogs")` would give you a `File` object with the path
-    of `.capers/dogs`
-
-### Running from Terminal
-
-The easiest way to run and test your program is to compile it in terminal with
-javac and then run it from there. E.g.
-
-```bash
-cd lab08                     # Make sure you are in your lab08 folder (NOT the lab08/capers folder)
-javac capers/*.java          # Make sure to recompile your program each time you make changes!
-java capers.Main [args]      # Run the commands you want! e.g., java story hello
-```
-
-For the `story` command, if you want to pass in a long string that includes
-spaces as the argument, you will want to put it in quotes, e.g.
-
-```bash
- java capers.Main story "hello world"
-```
-
-If running in IntelliJ, you will need to use Run > Edit Configurations >
-Program Arguments to add the command line arguments.
-
-### Command-Line Testing
-
-There are two ways to test your program: simply running the program with
-different arguments or using our JUnit tests!
-
-You can test your program yourself by running it in the command line. This is
-the method that the Gradescope autograder will use. The AG tests are a
-combination of running these commands in order:
-
-```bash
-$ java capers.Main story Hello
-Hello
-
-$ java capers.Main story World
-Hello
-World
-
-$ java capers.Main dog Sammie Samoyed 5
-Woof! My name is Sammie and I am a Samoyed! I am 5 years old! Woof!
-$ java capers.Main birthday Sammie
-Woof! My name is Sammie and I am a Samoyed! I am 6 years old! Woof!
-Happy birthday! Woof! Woof!
-$ java capers.Main dog Larry Lab 11
-Woof! My name is Larry and I am a Lab! I am 11 years old! Woof!
-$ java capers.Main birthday Sammie
-Woof! My name is Sammie and I am a Samoyed! I am 7 years old! Woof!
-Happy birthday! Woof! Woof!
-$ java capers.Main birthday Larry
-Woof! My name is Larry and I am a Lab! I am 12 years old! Woof!
-Happy birthday! Woof! Woof!
-```
-
-It also ignores whitespace at the beginning and end of the output so don't
-worry too much about that.
-
-### JUnit Testing
-
-In this lab, and in the upcoming project, you will be utilizing
-JUnit tests to assess the correctness of your code. You should read
-through the provided tests and try running them **before** settling in to write
-code in any of the other files.
-
-Intellij recognizes test methods automatically if you utilize the `@Test`
-annotation. This will cause a small green play triangle to appear to the left
-of the method header. You can use this to run specific tests, rather than the
-entire suite of tests! This will become useful as you work
-on specific elements of the spec.
-
-There are two possible failure outputs that you might see that aren't the usual
-test failures:
-
-1.  Tests fail with "This test is not being run in the `testing` directory.
-    Please see the spec for information on how to fix this."
-    -   To fix: Your JUnit configs are probably messed up. Delete all your
-        existing run configurations by clicking "Run > Edit Configurations", and
-        clicking the minus. Then, ensure that `.idea/runConfigurations` contains
-        a file named `_template__of_JUnit.xml`, with contents:
-
-        ```xml
-        <component name="ProjectRunConfigurationManager">
-          <configuration default="true" type="JUnit" factoryName="JUnit">
-            <option name="MAIN_CLASS_NAME" value="" />
-            <option name="METHOD_NAME" value="" />
-            <option name="TEST_OBJECT" value="class" />
-            <option name="VM_PARAMETERS" value="-ea -Djava.security.manager=allow" />
-            <option name="WORKING_DIRECTORY" value="$ProjectFileDir$/testing" />
-            <method v="2">
-                <option name="Make" enabled="true" />
-            </method>
-          </configuration>
-        </component>
-        ```
-
-        Finally, close and reopen IntelliJ, then try running the test again.
-
-2.  IntelliJ pops up a little red error bubble: `"Error running <Test>: Cannot
-    start process, the working directory .../testing does not exist"`
-    -   To fix: make the directory inside the project folder, i.e.
-        `lab08/testing` or `proj2/testing`.
 
 <details markdown="block">
   <summary markdown="block">
-## Git Branches (Optional)
+#### Visual guide: adding program arguments
+{: .no_toc}
   </summary>
 
-Branching is a very powerful git operation that lets you try out new features
-or implementations without muddying your working solution. A branch represents
-an independent line of development and thus when you want to add a new feature,
-or fix a bug, you can create a new branch to encapsulate your changes. This
-makes it unlikely that non-functional code will end up in your project!
+![Edit run configurations](img/edit_configurations.png)
 
-Branching can save a lot of time and tears when managing large, shared repos,
-such as the repository you will be working in to code Gitlet.
-
-The default branch is `main`. So far, all of your work has gone on this branch.
-
-### Branch Example: Building a Game
-{: .no_toc}
-
-Let's say we are building a fun game. We have just finished the base
-implementation and can't wait to show our family tomorrow. However, there is
-one new feature we are **dying** to add. What should we do?
-
-If we just start working from where we are, we would have to do a lot of work
-tomorrow to ensure that the version of code running is the code that works as
-expected.
-
-![All on main](img/no_branches.jpg)
-
-Branching gives us the freedom to try implementing this new feature while not
-breaking our working game.
-
-Let's say we make a new branch called `feature_branch`.
-
-We could do this with the command `git branch <branch name>`, so for us
-`git branch feature_branch`. This will create a new branch (starting from where
-we are) but will _not_ do anything else. If we ran `git branch`, which displays
-all the current branches in our repo, we would see that we are still on the
-`main` branch, denoted with a `*` next to the name.
-We want all our new changes to go here, so we have to move onto the new branch
-before we can make any new changes.
-You can swap to a new branch by doing `git checkout <branch name>`, so for us
-`git checkout feature_branch`. Once we execute this command if we run
-`git branch` again we will see that the `*` has moved from `main` to
-`feature_branch`. We have successfully swapped branches!! Now new commits will
-be on the `feature_branch` rather than our `main` branch.
-
-### Branching to Avoid Bugs
-{: .no_toc}
-
-Sometimes the changes we make don't turn out as we want them to. When we
-implement these changes on branches, we can ignore them or delete the entire
-branch -- easy peasy. We don't have to worry about removing all the changes we
-made as the clean code is still on our `main` branch!
-
-![Changes to Ignore](img/not_successful_branch.jpg)
-
-
-### Branching to Merge New Features
-{: .no_toc}
-
-Sometimes however we are able to complete the new feature before our family
-comes over to play the game! In this case, we can use `git merge <branch name>`
-to merge the code in our branch with the clean code on `main`!
-
-![Changes to Merge](img/successful_branch.jpg)
-
-To do this, we have to go back to main, as we want our resulting functioning
-code to remain on `main`. We do this with the same command as before, but swap
-`feature_branch` with `main`: `git checkout main`. Now if we run `git branch`
-we will see that the `*` is back next to `main`!
-
-Now we can merge in the changes we made in `feature_branch` by executing
-`git merge feature_branch`. This creates our merge commit, commit number 4.
-It will have all the new code for our feature mixed with our functioning game
-code!
-
-### Branch Usage
-{: .no_toc}
-
-Branching can be very useful to maintain order in shared repos. Ultimately,
-however, the way you organize your repository is entirely up to you. As a final
-reminder, if throughout this process you get a `detached HEAD state`, check out
-the [git WTFs](https://cs61bl.org/su24/guides/git-wtfs) guide.
+![Set command line arguments](img/set_command_line_args.png)
 
 </details>
 
-## Submission
+By compiling and running `Sorter.java` with different arguments, determine the size
+of the smallest array that needs 1 second (1000 milliseconds) to sort.
 
-You should have made changes in `capers/Main.java` and `capers/Dog.java` such that all functionality is implemented as specified in the "Suggested Order of Completion" section.
-**You should not be submitting a .capers data folder. Do not use `git add .` or
-`git add -A` to add your files. git add your files one by one**. You
-can submit the lab as always, through the Gradescope interface after
-committing and pushing such as:
+You may notice that other students in lab end up with different timing results
+and a different number of elements. What factors might contribute to these differences?
 
-```shell
-git commit -m "submitting lab08. So ready for Gitlet!!"
-git push origin main
+## Counting Steps
+
+From timing the program in the previous example, we learned it isn't very
+helpful in determining how good an algorithm is; different computers end up with
+different results! Additionally, we won't know the runtime of our algorithm until _after_ we've run the timer - we can't make any predictions about runtime with a timer. An alternative approach is **step counting**. The number of
+times a given *step*, or instruction, in a program gets executed is independent
+of the computer on which the program is run and is similar for programs coded
+in related languages. With step counting, we can now formally and
+deterministically describe the runtime of programs.
+
+We define a single step as the execution of a single instruction or primitive
+function call. For example, the `+` operator which adds two numbers is
+considered a single step. We can see that `1 + 2 + 3` can be broken down into
+*two steps* where the first is `1 + 2` while the second takes that result and
+adds it to 3. From here, we can combine simple steps into larger and more
+complex *expressions*.
+
+```java
+(3 + 3 * 8) % 3
 ```
 
-There is no style check for this lab.
+This expression takes 3 steps to complete: one for multiplication, one for
+addition, and one for the modulus of the result.
 
-## Credits
+From expressions, we can construct *statements*. An assignment statement, for
+instance, combines an expression with one more step to assign the result of the
+expression to a variable.
 
-Capers was originally written by Sean Dooher in Fa19. Spec was rewritten by
-Michelle Hwang in Sp20 and adapted for Su20 by Zephyr Omaly. Test suite was
-adapted to JUnit tests written in Su22 by Ethan Ordentlich.
+```java
+int a = 4 * 6;
+int b = 9 * (a - 24) / (9 - 7);
+```
+
+In the example above, each assignment statement takes one additional step on
+top of however many steps it took to compute the right-hand side expressions.
+In this case, the first assignment to `a` takes one step to compute `4 * 6` and
+one more step to assign the result, 24, to the variable `a`. **How many steps
+does it take to finish the assignment to `b`?**
+
+Here are some rules about what we count as taking a single step to compute:
+
+- Assignment and variable declaration statements
+- All unary (like negation) and binary (like addition, and, or) operators
+- Conditional `if` statements
+- Function calls
+- `return` statements
+
+One important case to be aware of is that, while *calling* a function takes a
+single step to setup, *executing* the body of the function may require us to do
+**much** more than a single step of work.
+
+### Counting Conditionals
+
+With conditional statements like `if` statements, the total step count depends
+on the outcome of the condition we are testing.
+
+```java
+if (a > b) {
+    temp = a;
+    a = b;
+    b = temp;
+}
+```
+
+The example above can take four steps to execute: one for evaluating the
+conditional expression `a > b` and three steps for evaluating each line in the
+body of the condition. But this is only the case if `a > b`. If the condition
+is not true, then it only takes one step to check the conditional expression.
+
+That leads us to consider two quantities: the **worst case count**, or the
+maximum number of steps a program can execute, and the **best case count**, or
+the minimum number of steps a program needs to execute. The worst case count
+for the program segment above is 4 and the best case count is 1.
+
+### `if ... else` Counting
+
+Consider an `if ... else` of the form,
+
+```java
+if (A) {
+    B;
+} else {
+    C;
+}
+```
+
+where `A`, `B`, and `C` are program segments. (`A` might be a method call, for
+instance.)
+
+**How many steps does it take to evaluate the entire `if ... else`
+block in terms of the number of steps it takes to evaluate `A`, `B`, and `C`?**
+Think back to your practice tracing through programs to figure out which parts
+of the conditional will be evaluated (given the condition is true or false),
+and which parts won't be evaluated.
+
+### Loop Counting
+
+```java
+for (int k = 0; k < N; k++) {
+    sum = sum + 1;
+}
+```
+
+In terms of $$N$$, how many operations are executed in this loop? Remember that
+each of the actions in the for-loop header (the initialization of `k`, the exit
+condition, and the increment) count too!
+
+> It takes 1 step to execute the initialization, `int k = 0`. Then, to execute
+> the loop, we have the following sequence of steps:
+>
+> - Check the loop condition, `k < N`
+> - Add 1 to the `sum`
+> - Update the value of `sum` by assignment
+> - Increment the loop counter, `k`
+> - Update `k` by assignment
+>
+> This accounts for the first $$1 + 5N$$ steps. In the very last iteration of
+> the loop, after we increment `k` such that `k` now equals $$N$$, we spend one
+> more step checking the loop condition again to figure out that we need to
+> finally exit the loop so the final number of steps is $$1 + 5N + 1$$.
+
+### Example: `remove`
+
+Now consider code for the `remove` method, which removes the item at a given position of an array `values` by shifting over all the remaining elements. We notice here that things become slightly more complicated as the number of steps performed matters both on `pos` and `len`, the number of items contained in `values`. We now count the number of steps performed in terms of these two variables.
+
+> This example assumes that you are using an array to back some kind of list. This idea is similar to Project 1, but this implementation is not circular. Also assume that the length of the underlying array is much larger than length and will not have an effect on the runtime of this program.
+>
+> The list will have the instance variables `values` which is the array backing the list and `len` which corresponds to the number of items actually contained in the list (not necessarily the same as `values.length`).
+
+```java
+void remove(int pos) {
+    for (int k = pos + 1; k < len; k++) {
+        values[k - 1] = values[k];
+    }
+    len -= 1;
+}
+```
+
+Each column in the table below shows the total number of steps for computing each value of `pos`. These counts are written as a function of `len`. This way we can come up with total counts for the number of steps parameterized by `len` and `pos`.
+
+| category            | pos = 0      | pos = 1       | pos = 2       | ... | pos = `len` - 1 |
+|---------------------|--------------|---------------|---------------|-----|-----------------|
+| `pos + 1`           | 1            | 1             | 1             |     | 1               |
+| assignment to `k`   | 1            | 1             | 1             |     | 1               |
+| loop conditional    | `len`        | `len` - 1     | `len` - 2     |     | 1               |
+| increment to `k`    | `len` - 1    | `len` - 2     | `len` - 3     |     | 0               |
+| update `k`          | `len` - 1    | `len` - 2     | `len` - 3     |     | 0               |
+| array access        | `len` - 1    | `len` - 2     | `len` - 3     |     | 0               |
+| array assignment    | `len` - 1    | `len` - 2     | `len` - 3     |     | 0               |
+| decrement to `len`  | 1            | 1             | 1             |     | 1               |
+| assignment to `len` | 1            | 1             | 1             |     | 1               |
+| Total count         | 5 * `len`    | 5 * `len` - 5 | 5 * `len` - 10 |     | 5               |
+
+We can summarize these results as follows: a call to remove with argument `pos`
+requires in total:
+
+- 1 step to calculate `pos + 1`
+- 1 step to make the initial assignment to `k`
+- `len - pos` loop tests
+- `len - pos - 1` increments of `k`
+- `len - pos - 1` reassignments to `k`
+- `len - pos - 1` accesses to `values` elements
+- `len - pos - 1` assignments to `values` elements
+- 1 step to decrement `len`
+- 1 step to reassign to `len`
+
+If all these operations take roughly the same amount of time, the total is `5 *
+(len - pos)`. Notice how we write the number of statements as a *function of the input arguments*.
+
+> Although `len` is not a parameter of the `remove` method it is still considered to be an input as its value affects the number of steps.
+>
+> More formally we can also see that since `remove` is a non-static method, we are implicitly passing in the variable `this` to our `remove` method. This means that the variables `this.values` and `this.length` are also passed in.
+
+Comparing across a fixed value of `len` we can notice that for a small value of `pos`, the number of steps executed will be *greater* than if we had a larger value of `pos` (e.g. closer to `len`). And vice versa: a larger value of `pos` will reduce the number of steps we need to execute.
+
+### Example with Nested Loops: `removeZeroes`
+
+Counting steps in nested loops is a little more involved. As an example, we'll
+consider an implementation of the method `removeZeroes`.
+
+```java
+void removeZeroes() {
+    int k = 0;
+    while (k < len) {
+        if (values[k] == 0) {
+            remove(k);
+        } else {
+            k += 1;
+        }
+    }
+}
+```
+
+Intuitively, the code should be slowest on an input where we need to do the
+most work, or an array of `values` full of zeroes. Here, we can tell that there
+is a worst case (removing everything) and a best case (removing nothing). To
+calculate the runtime, like before, we start by creating a table to help
+organize information.
+
+| category          | best case | worst case |
+|-------------------|-----------|------------|
+| assignment to `k` | 1         | 1          |
+| loop conditional  | `len` + 1 | `len` + 1  |
+| array accesses    | `len`     | `len`      |
+| comparisons       | `len`     | `len`      |
+| calls to remove   | 0         | `len`      |
+| k + 1             | `len`     | 0          |
+| update to `k`     | `len`     | 0          |
+
+In the best case, we never call `remove` so its runtime is simply the sum of
+the rows in the "best case" column. Thus, the best-case count is `2 + 5 * len`.
+
+The only thing left to analyze is the worst-case scenario. Remember that the
+worst case makes `len` total calls to `remove`. We already approximated the
+cost of a call to `remove` for a given `pos` and `len` value earlier: `5 *
+(len - pos)`.
+
+In our removals, `pos` is always 0, and only `len` is changing. The total
+cost of the removals is shown below.
+
+$$[5 \cdot \texttt{len}] + [5 \cdot (\texttt{len} - 1)] + \cdots +[5 \cdot (1)] + [5 \cdot (0)]$$
+
+$$= 5 \cdot [(\texttt{len}) + (\texttt{len} - 1) + \cdots + (1) + (0)]$$
+
+The challenge now is to simplify the expression. A handy summation formula to
+remember is the sum of the first $$k$$ natural numbers.
+
+$$1 + 2 + \cdots + k = \frac{k(k + 1)}{2}$$
+
+This lets us simplify the cost of removals (note that above was exactly a multiple of this form with terms from 1 to `len`). Remembering to include the additional steps in the table, we can now express the worst-case count of
+`removeZeroes` as:
+
+$$5 \cdot \frac{\texttt{len}(\texttt{len} + 1)}{2} + 3 \cdot \texttt{len} + 2$$
+
+We often prefer to simplify this by substituting `len` for a symbolic name like $$N$$.
+
+$$5 \frac{N(N + 1)}{2} + 3N + 2$$
+
+That took... a while.
+
+## Abbreviated Estimates
+
+> From this section onwards, we present a set of fairly precise definitions,
+> and we'll be relying on the example developed in this and the previous
+> part to build a solid definition for asymptotic notation. If you're
+> not fully comfortable with any of the material so far, now is the perfect
+> time to review it with someone in your lab or your TA!
+
+Producing step count figures even for those relatively simple program segments took a **lot**
+of work. But normally we don't actually need an exact step count but rather
+just an *estimate* of how many steps will be executed.
+
+In most cases, we only care about what happens for very large $$N$$ as that's
+where the differences between algorithms and their execution time really become
+limiting factors in the scalability of a program.
+
+Why is this? Debate with someone in your lab. Then, see our thoughts below
+
+<details markdown="block">
+  <summary markdown="block">
+#### Our take
+{: .no_toc}
+  </summary>
+When our $$N$$ is really small, no reasonable function
+will take a long time to execute! Imagine a program that takes $$N^{12}$$ steps
+to execute. When $$N=3$$, it doesn't really matter! But when
+$$N \gg 3$$ ($$N$$ much larger than 3) we might start to get really impatient (or the universe might end)!
+
+</details>
+
+We want to consider what
+types of algorithms would best handle big amounts of data, such as in the
+examples listed below:
+
+- Simulation of billions of interacting particles
+- Social network with billions of users
+- Encoding billions of bytes of video data
+
+> Here we are using a generic value of $$N$$ to represent the size of an input passed into a function. Note that we will not always use $$N$$ to represent the size of a program input (though it is common).
+>
+> Also notice that sometimes the program will be parameterized by more than just one input; however, for most examples in this class we will ask you to write the order of growth in terms of just one variable.
+
+The **asymptotic behavior** of a function `f` (any one of the programs above,
+for example) is a description of how the execution time of `f` changes as the
+value of $$N$$ grows increasingly large towards infinity. Our goal is to come
+up with a technique that can be used to compare and contrast two algorithms to
+identify which algorithm scales better for large values of $$N$$.
+
+We can then compute the **order of growth** of a program, a classification of
+how the execution time of the program changes as the size of the input grows
+larger and larger. For example, we say that the *order of growth* of $$2N + 3$$ is $$N$$ since, for large
+values of $$N$$, $$2N + 3$$ will be less than $$3N$$ and slightly greater than
+$$2N$$. As $$N$$ tends towards infinity, the $$+ 3$$ contributes less and less
+to the overall runtime.
+
+This pattern holds for higher-order terms too. Applying this estimation
+technique to the `removeZeroes` method above results in the following orders of
+growth.
+
+- The order of growth for the best-case runtime of `removeZeroes`, $$5N + 2$$,
+  is proportional to the `len`, $$N$$.
+- The order of growth for the worst-case runtime of `removeZeroes`, $$5
+  \frac{N(N + 1)}{2} + 3N + 2$$, is $$N^2$$.
+
+The intuitive simplification being made here is that we **discard all but the
+most significant term of the estimate and also any constant factor of that
+term**. Later, we will see exactly why this is true with a more formal proof.
+
+## Asymptotic Analysis
+
+### Recap: Simplified Analysis Process
+
+Rather than building the entire table of all the exact step counts, we can
+instead follow a *simplified analysis process*.
+
+Choose a cost function
+: These are the underlying assumptions about the costs of each step or
+instruction for our machine. In this course, we'll assume all of the basic
+operations (Java operators, assignment statements, `return` statements, array
+access) each take the same amount of time (1 unit to execute). In CS 61C, we'll see how this
+fundamental assumption often isn't true.
+
+Compute the order of growth
+: Given the cost function, we can then compute the **order of growth** for a
+program. In the `removeZeroes` example, we saw how we could compute an exact
+count and then find the correct order of growth runtime classification for it
+by simplifying the expression.
+
+Later, we'll learn a few shortcuts and practice building intuition / inspection
+to determine orders of growth, but it's helpful to remember that we're always
+solving the same fundamental problem of measuring how long it takes to run a
+program, and how that runtime changes as we increase the value of $$N$$.
+
+### Big-Theta Notation
+
+Computer scientists often use special notation to describe runtime. The first
+one we'll learn is called *big-theta*, represented by the symbol $$\Theta$$.
+
+Suppose we have a function, $$R(N)$$, with order of growth $$f(N)$$. We could
+say,
+
+> $$R(N) \in \Theta(f(N))$$, or "$$R(N)$$ is in $$\Theta(f(N))$$"
+
+Why do we say "in" $$\Theta$$? Formally, $$\Theta(f(N))$$ is a family of
+functions that all grow *proportional to* $$f$$. Here, proportional can be thought of
+as roughly *equal*. Thinking back to our working
+definition of **order of growth** as a method for *classification*,
+$$\Theta(f(N))$$ refers to the entire set of all functions that share the same
+order of growth.
+
+The advantage of using notation like big-theta is that it provides a common
+definition for *asymptotic analysis* which reduces the amount of explaining we
+need to do when we want to share our ideas with others. It also makes sure
+we're all on the same page with the claims we make, so long as we use them
+carefully and precisely.
+
+Learning new notation can be a little daunting, but we've actually already
+been making statements in big-theta terms. The first claim about `removeZeroes`
+that we made earlier,
+
+> The order of growth for the best-case runtime of `removeZeroes`, $$5N + 2$$,
+> is proportional to the length of the array, $$N$$.
+
+is essentially equivalent to the claim: **In the best-case, `removeZeroes` is
+in $$\Theta(N)$$.**
+
+And, likewise, the second claim that we made earlier,
+
+> The order of growth for the worst-case runtime of `removeZeroes`, $$5
+> \frac{N(N + 1)}{2} + 3N + 2$$, is $$N^2$$.
+
+has its own equivalent in big-theta notation: **In the worst-case,
+`removeZeroes` is in $$\Theta(N^2)$$.**
+
+> When we use `removeZeroes` here, we mean the *runtime of the function* rather
+> than the function itself. In practice, we'll often use this English shortcut
+> as long as the meaning is clearly communicated, though it would be more
+> accurate to say the *runtime of the function*.
+
+### Asymptotic Variables
+
+You may have observed, in our analysis of `removeZeroes`, that we were careful
+to make clear what the running time estimate depended on, namely the value of
+`len` and `pos`.
+
+Unfortunately, people are sometimes careless about specifying the quantity on
+which an estimate depends. Don't just use $$N$$ without making clear what $$N$$
+means. This distinction is important especially when we begin to touch on
+sorting later in the course. It may not always be clear what $$N$$ means.
+
+We'll often qualify our runtimes by stating, "where $$N$$ is the length of the
+list", but we often also say things like, "where $$N$$ is the value of the
+largest number in the list".
+
+### Asymptotic Bounds
+
+Formally, we say that $$R(N) \in \Theta(f(N))$$ if and only if there exist
+positive constants $$k_1, k_2$$ such that $$k_1 \cdot f(N) \leq R(N) \leq k_2 \cdot
+f(N)$$ for all $$N$$ greater than some $$N_0$$ (very large $$N$$).
+
+In other words, $$R(N)$$ must be **bounded** above and below by $$f(N)$$
+asymptotically. But we've already seen something like this too.
+
+> We say that the *order of growth* of $$2N + 3$$ is $$N$$ since, for large
+> values of $$N$$, $$2N + 3$$ will be less than $$3N$$ and slightly greater
+> than $$2N$$. As $$N$$ tends towards infinity, the $$+ 3$$ contributes less
+> and less to the overall runtime.
+
+In this example, we chose $$k_1 = 2$$ and $$k_2 = 3$$. These two choices of
+$$k$$ constitute a *tight-bound* for $$2N + 3$$ for all values of $$N \geq 3$$.
+
+This idea of big-theta notation as a tight-bound is very useful as it allows us
+to, very precisely, state *exactly* how scalable a function's runtime grows as
+the size of its input ($$N$$) grows. When a $$\Theta(N)$$ function's input
+size increases, we'd expect the runtime to also increase linearly.
+
+### Big-O
+
+But, there are many scenarios where we can't actually give a tight bound:
+sometimes, it just doesn't exist. And, practically-speaking, one of the common
+use scenarios for runtime in the real world is to help choose between several
+different algorithms with different orders of growth. For these purposes, it's
+often sufficient just to give an *upper-bound* on the runtime of a program.
+
+There exists a very common asymptotic notation, *big-O*, represented by the
+symbol, $$O$$.
+
+If we could think of big-theta as an $$=$$ (equals) sign, then big-O is like a
+$$\leq$$ sign. Likewise, the formal definition for big-O follows, $$R(N) \in
+O(f(N))$$ if and only if there exists a positive constant $$k_2$$ such that
+$$R(N) \leq k_2 \cdot f(N)$$ for all $$N$$ greater than some $$N_0$$ (very large
+$$N$$).
+
+Note that this is a looser condition than big-theta since big-O doesn't include the lower bound.
+
+To see why we would prefer a theta bound consider the following simplified example. Would you know more about a person's age if they told you either 1. "I am between 30 and 40 years old" OR 2. "I am less than 40 years old"?
+
+### Big-Omega
+
+Sometimes it will also be useful to describe function runtimes using an $$\Omega$$ (Omega) bound, which you can think of as a lower bound. For example, if a tight $$\Theta$$ bound does not exist you could supply an $$O$$ and $$\Omega$$ bound. Practically speaking, an $$\Omega$$ bound by itself might be less useful than a $$\Theta$$ or $$O$$ bound, but in certain cases it will provide useful information.
+
+Similar to above, if we could think of big-theta as an $$=$$ (equals) sign, then big-$$\Omega$$ is like a
+$$\geq$$ sign. Likewise, the formal definition for big-Omega follows, $$R(N) \in
+\Omega(f(N))$$ if and only if there exists a positive constant $$k_1$$ such that
+$$R(N) \geq k_1 \cdot f(N)$$ for all $$N$$ greater than some $$N_0$$ (very large
+$$N$$).
+
+Note that this too is a looser condition than big-theta since big-Omega doesn't include
+the upper bound.
+
+We can return to our simplified example to again show why we prefer a theta bound. Would you know more about a person's age if they told you either 1. "I am between 30 and 40 years old" OR 2. "I am more than 30 years old"?
+
+### Back to Big Theta
+
+Now that we have learned big-Omega and big-O notation, where does big theta fall into this? We already said that big theta means *roughly equal*, but what does that mean? Given we have defined big-O as an *upper bound* and big-Omega as a *lower bound*, what happens if the tightest big-O bound
+is in the same family as the tightest big-Omega bound? This means the code is both
+upper bounded **AND** lower bounded by the same family of functions! This is what we mean by **equal**.
+
+A theta bound only exists if the tightest big-O bound is equal to the tightest big-Omega bound.
+
+## Discussion: Case Analysis
+
+> Read the following three sections of **[Chapter 8.4 from Runtime Analysis
+> Subtleties][]** all the way through **Big Omega**. You don't need to read the
+> last section on *Amortized Analysis*, yet. We will see that in a few labs!
+
+[Chapter 8.4 from Runtime Analysis Subtleties]: https://joshhug.gitbooks.io/hug61b/content/chap8/chap84.html#runtime-analysis-subtleties
+
+Discuss with someone *why* each of the following claims are true.
+
+- `removeZeroes` is in $$\Omega(1)$$.
+- `removeZeroes` is in $$\Omega(N)$$.
+- `removeZeroes` is in $$O(N^2)$$.
+- A $$\Theta(\cdot)$$ bound does not exist for `removeZeroes`.
+- In the best case, `removeZeroes` is in $$O(N^2)$$.
+- In the best case, `removeZeroes` is in $$\Theta(N)$$.
+- In the worst case, `removeZeroes` is in $$\Omega(\log N)$$.
+- In the worst case, `removeZeroes` is in $$\Theta(N^2)$$.
+
+### Limit Definition
+
+An alternative, the calculus-based [limit definition][] is also sometimes useful,
+as you can apply L'Hopital's Rule to derive asymptotic simplifications like
+dropping multiplicative constants and additive lower-order terms.
+
+We generally won't use this too often though, as the first definition provides
+a more useful and intuitive visualization of the lower and upper bounds.
+
+[limit definition]: https://ocw.mit.edu/courses/6-042j-mathematics-for-computer-science-spring-2015/resources/mit6_042js15_session24/
+
+## Common Orders of Growth
+
+Here are some commonly-occurring estimates listed from no growth at all to
+fastest growth.
+
+- **Constant time**, often indicated with $$1$$.
+- **Logarithmic time** or proportional to $$\log N$$.
+- **Linear time** or proportional to $$N$$.
+- **Linearithmic time** or proportional to $$N \log N$$.
+- **Polynomial time** or proportional to $$N^{k}$$ for some constant $$k$$.
+- **Exponential time** or proportional to $$k^{N}$$ for some constant $$k$$.
+- **Factorial time** or proportional to $$N!$$ ($$N$$ factorial).
+
+![Orders of Growth](img/orders-of-growth.png)
+
+### Logarithmic Algorithms
+
+First, if you are shaky on the properties of logarithms, I suggest looking through
+[this](https://www.khanacademy.org/math/algebra2/x2ec2f6f830c9fb89:logs/x2ec2f6f830c9fb89:log-prop/a/properties-of-logarithms) Khan academy section on log properties!
+
+We will shortly encounter algorithms that run in time proportional to $$\log
+N$$ for some suitably defined $$N$$. Recall from algebra that the base-10
+logarithm of a value is the exponent to which 10 must be raised to produce the
+value. It is usually abbreviated as $$\log_{10}$$. Thus
+
+- $$\log_{10} 1000$$ is 3 because $$10^{3} = 1000$$.
+- $$\log_{10} 90$$ is slightly less than 2 because $$10^{2} = 100$$.
+- $$\log_{10} 1$$ is 0 because $$10^{0} = 1$$.
+
+In algorithms, we commonly deal with the base-2 logarithm, written as $$\lg$$,
+defined similarly.
+
+- $$\lg 1024$$ is 10 because $$2^{10} = 1024$$.
+- $$\lg 9$$ is slightly more than 3 because $$2^{3} = 8$$.
+- $$\lg 1$$ is 0 because $$2^{0} = 1$$.
+
+Another way to think of log is the following: $$\log_{\text{base}} N$$ is the
+number of times $$N$$ must be divided by the base before it hits 1. For the
+purposes of determining orders of growth, however, the log base actually
+doesn't make a difference because, by the change of base formula, we know that
+any logarithm of $$N$$ is within a constant factor of any other logarithm of
+$$N$$. We usually express a logarithmic algorithm as simply $$\log N$$ as a
+result.
+
+Change of Base Formula
+: $$\log_b x = \frac{\log_a x}{\log_a b}$$
+
+Algorithms for which the running time is logarithmic are those where processing
+discards a large proportion of values in each iterations. The binary search
+algorithm is an example. We can use binary search in order to guess a number
+that a person is thinking of. In each iteration, we guess a number and are told whether the number they're thinking of is higher or lower than our guess. The algorithm then discards half the
+possible values for the searched-for number, repeating the process in the other half. Thus, we continually divide the size of
+the problem by 2 until there is only one value left.
+
+For example, say you started with a range of 1024 numbers in the number
+guessing game. Each time you would discard half of the numbers so that each
+round would have the following numbers under consideration:
+
+| Round # | Numbers left |
+|---------|--------------|
+| 1       | 1024         |
+| 2       | 512          |
+| 3       | 256          |
+| 4       | 128          |
+| 5       | 64           |
+| 6       | 32           |
+| 7       | 16           |
+| 8       | 8            |
+| 9       | 4            |
+| 10      | 2            |
+| 11      | 1            |
+
+We know from above that $$\lg 1024 = 10$$ which gives us an approximation of
+how many rounds it will take. We will see further applications of logarithmic
+behavior when we work with trees in subsequent activities.
+
+## Analyzing Iteration
+
+We've thus far defined the language of asymptotic analysis and developed some
+simple methods based on counting the total number of steps. However, the kind
+of problems we want to solve are often too complex to think of just in terms of
+number iterations times however much work is done per iteration.
+
+Consider the following function, `repeatedSum`.
+
+```java
+long repeatedSum(int[] values) {
+    int N = values.length;
+    long sum = 0;
+    for (int i = 0; i < N; i += 1) {
+        for (int j = i; j < N; j += 1) {
+            sum += values[j];
+        }
+    }
+    return sum;
+}
+```
+
+In `repeatedSum`, we're given an array of `values` of length N. We want to take
+the repeated sum over the array as defined by the following sequences of values `j` takes on:
+
+- $$0, 1, 2, 3, \cdots, N - 1$$
+- $$1, 2, 3, 4, \cdots, N - 1$$
+- $$2, 3, 4, 5, \cdots, N - 1$$
+
+Notice that each time, the number of elements, or the iterations of `j`, being
+added is reduced by 1. While in the first iteration, we sum over all $$N$$
+elements, in the second iteration, we only sum over $$N - 1$$ elements. On the
+next iteration, even fewer: just $$N - 2$$ elements. This pattern continues until
+the outer loop, `i`, has incremented all the way to $$N$$.
+
+One possible approach to this problem is to draw a bar chart to visualize how
+much work is being done for each iteration of `i`. We can represent this by
+plotting the values of `i` across the X-axis of the chart and the number of
+steps for each corresponding value of `i` across the Y-axis of the chart.
+
+![Empty plot](img/empty-plot.png)
+
+Now, let's plot the amount of work being done on the first iteration of `i`
+where `i = 0`. If we examine this iteration alone, we just need to measure the
+amount of work done by the `j` loop. In this case, the `j` loop does work
+proportional to $$N$$ steps as the loop starts at 0, increments by 1, and only
+terminates when `j = N`.
+
+How about the next iteration of `i`? The loop starts at 1 now instead of 0 but
+still terminates at $$N$$. In this case, the `j` loop is proportional to $$N -
+1$$ steps. The next loop, then, is proportional to $$N - 2$$ steps.
+
+![Partial linear plot](img/partial-linear-plot.png)
+
+We can start to see a pattern forming. As `i` increases by 1, the amount of
+work done on each corresponding `j` loop decreases by 1. As `i` approaches
+$$N$$, the number of steps in the `j` loop approaches 0. In the final
+iteration, when `i = N - 1`, the `j` loop performs work proportional to 1 step.
+
+![Extrapolated linear plot](img/extrapolated-linear-plot.png)
+
+We've now roughly measured each loop proportional to some number of steps. Each
+independent bar represents the amount of work any one iteration of `i` will
+perform. The runtime of the entire function `repeatedSum` then is the sum of
+all the bars, or simply the area underneath the line.
+
+![Complete linear plot](img/complete-linear-plot.png)
+
+The problem is now reduced to finding the area of a triangle with a base of
+$$N$$ and height of also $$N$$. Thus, the runtime of `repeatedSum` is in
+$$\Theta(N^{2})$$.
+
+We can verify this result mathematically by noticing that the sequence can be
+described by the following summation:
+
+$$1 + 2 + 3 + ... + N = \frac{N(N + 1)}{2}$$,
+which after dropping lower order terms and multiplicative constants we see is in $$\Theta(N^{2})$$. It's useful to know both the formula as well as
+its derivation through the chart above.
+
+## Multivariate Analysis
+
+Sometimes we care about how the runtime of an algorithm will grow with respect to multiple variables. As an example, consider the `rectangle` function below that computes the area of a rectangle with side lengths `N` and `M`.
+
+```java
+int rectangle(int N, int M) {
+    int area = 0;
+    for (int i = 0; i < N; i++) {
+        for (int j = 0; j < M; j++) {
+            area += 1;
+        }
+    }
+    return area;
+}
+```
+
+Analyzing this algorithm we see that the outer loop runs $$N$$ times and the inner loop runs $$M$$ times per each iteration of the outer loop. Since each iteration of the inner loop only does a constant amount of work, we find the resulting runtime to be in $$\Theta(MN)$$.
+
+## Analyzing Recursion
+
+Now that we've learned how to use a bar chart to represent the runtime of an
+iterative function, let's try the technique out on a recursive function,
+`mitosis`.
+
+```java
+int mitosis(int N) {
+    if (N == 1) {
+        return 1;
+    }
+    return mitosis(N / 2) + mitosis(N / 2);
+}
+```
+
+Let's start by trying to map each $$N$$ over the x-axis like we did before and
+try to see how much work is done for each call to the function. The conditional
+contributes a constant amount of work to each call. But notice that in our
+return statement, we make two recursive calls to `mitosis`. How do we represent
+the runtime for these calls? We know that each call to `mitosis` does a
+constant amount of work evaluating the conditional base case but it's much more
+difficult to model exactly how much work each recursive call will do. While a
+bar chart is a very useful way of representing the runtime of iterative
+functions, it's not always the right tool for recursive functions.
+
+Instead, let's try another strategy: drawing call trees. Like the charting
+approach we used for iteration earlier, the *call tree* will reduce the
+complexity of the problem and allow us to find the overall runtime of the
+program on large values of $$N$$ by taking the tree recursion out of the
+problem. We will draw each call to the function as a node with its input size within the node, and recursive calls are drawn as children of a node. Consider the call tree for `fib` below.
+
+```java
+int fib(int N) {
+    if (N <= 1) {
+        return 1;
+    }
+    return fib(n - 1) + fib(n - 2);
+}
+```
+
+![Fibonacci tree](img/fib-tree.png)
+
+At the *root* of the tree, we make our first call to `fib(n)`. The recursive
+calls to `fib(n - 1)` and `fib(n - 2)` are modeled as the two *children* of the
+root node. We say that this tree has a *branching factor* of two as each node
+contains two children. It takes a constant number of instructions to evaluate
+the conditional, addition operator, and the return statement as denoted by the
+`1` to the upper-right of each node. (Note that you may see call trees with nodes' input size and work performed in opposite positions. Be sure to understand what the numbers in your call tree represent.)
+
+We can see this pattern occurs for all nodes in the tree: each node performs
+the same constant number of operations if we don't consider recursive calls. If
+we can come up with a scheme to count all the nodes, then we can simply
+multiply by the constant number of operations to find the overall runtime of
+`fib`.
+
+For a tree with branching
+factor $$b$$ and height $$h$$ we can compute the number of nodes as $$b^{h+1}-1$$ (if we think of the root as height 0). For the sake of asymptotic analysis, it is sufficient to use $$b^{h}$$ or $$b^{h+1}$$ as we will below (as an exercise, can you justify why?).
+
+Spend a little time thinking about the maximum height of this tree: when does the base
+case tell us the tree recursion will stop?
+
+> Note that the counting the number of nodes in this recursive call tree for `fib` ends up being a little tricky because the tree is not symmetric i.e. each of the two recursive calls made from one call to `fib` are not the same.
+>
+> If you are interested, you can check out [this article](https://www.geeksforgeeks.org/time-complexity-recursive-fibonacci-program/) which explains how to compute a tight bound for `fib`.
+
+Returning to the original problem of `mitosis`, the call tree is setup just
+like `fib` except instead of decrementing $$N$$ by 1 or 2, we now divide $$N$$
+in half each time. Each node performs a constant amount of work but also makes
+two recursive calls to `mitosis(N / 2)`.
+
+![N-time tree](img/n-tree.png)
+
+Like before, we want to identify both the branching factor and the height of
+the tree. In this case, the branching factor is 2 like before. Recall that the
+series $$N, N/2, \cdots , 4, 2, 1$$ contains $$\log_{2} N$$ elements since, if
+we start at $$N$$ and break the problem down in half each time, it will take us
+approximately $$\log_{2} N$$ steps to completely reduce down to 1, so the height of the tree will be $$\log_{2} N$$.
+
+Plugging into the formula, we get $$2^{\log_{2} N}$$ nodes which simplifies to
+$$N$$. Therefore, $$N$$ nodes performing a constant amount of work each will
+give us an overall runtime in $$\Theta(N)$$.
+
+There is another way to approach this analysis: going level by level. We can see that on the first level of the recursive call tree there is a single node doing a constant amount of work (1). On the second level we double the number of nodes, but each node still is doing a constant amount of work, so the total work on this layer is 1+1=2. Similarly, we can see that the work on level 3 is 4, on level 4 is 8, and so on following the pattern that the work on level $$i$$ is $$2^{i}$$. From the analysis above, we know that this tree has $$\log_{2} N$$ levels. Now, to figure out the total work done by the function we just need to sum up all the work done by all of the levels:
+
+$$1 + 2 + 4 + \cdots + 2^{(log_{2} N) - 2} + 2^{(log_{2} N) - 1}$$
+
+$$ = 1 + 2 + 4 + \cdots + \frac{N}{4} + \frac{N}{2}$$
+
+This is a geometric sum which is dominated by its last element. Here, the last element is larger than all of the elements that came before it combined (Exercise: prove this to yourself. As a hint, try out the first few powers of 2). This allows us to say the overall runtime is proportional to the last term giving us an overall runtime in $$\Theta(N)$$
+
+It will not always be the case that each layer in a recursive call tree will have the same amount of summed work, nor will it always be the case that each node in a recursive call tree will do the same amount of work. You will have to use the techniques at your disposal to solve these problems, which is a skill that takes time and practice to develop.
+
+In general, for a recursion tree, we can think of the total work as:
+
+$$\sum_{\text{layers}} \frac{\text{nodes}}{\text{layer}
+}\frac{\text{work}}{\text{node}}$$
+
+For `mitosis`, we have $$\log N$$ levels,
+$$2^(i-1)$$ nodes in layer $$i$$, with $$1$$ work per node. Thus we see the summation will be as follows, which matches the quantity we just calculated:
+
+$$\sum_{i = 0}^{\log N} 2^i (1)$$
+
+## Recap
+
+Runtime Minimization
+: One of the most important properties of a program is the time it takes to
+execute. One goal as a programmer is to minimize the time (in seconds) that a
+program takes to complete.
+
+Runtime Measurement
+:   - Measure the number of seconds that a program takes to complete using a
+    stopwatch (either physical or in software). This tells you the actual
+runtime, but is dependent on the machine and inputs.
+    - Count the number of operations needed for inputs of a given size. This is
+      a machine independent analysis, but still depends on the input, and also
+doesn't actually tell you how long the code takes to run.
+    - Derive an algebraic expression relating the number of operations to the
+      size of an input. This tells you how the algorithm scales, but does not
+tell you how long the code takes to run.
+
+Algorithm Scaling
+:   While we ultimately care about the runtime of an algorithm in seconds, we'll
+often say that one algorithm is better than another simply because of how it
+scales. By scaling, we mean how the runtime of a piece of code grows as a
+function of its input size. For example, inserting at the beginning of
+ArrayList on an old computer might take $$R(N) = 0.0001N$$ seconds, where $$N$$
+is the size of the list. For example, if the runtime of two algorithms is $$R_1(N) = N^2$$, and
+$$R_2(N) = 5000 + N$$, we'd say algorithm $$R_2$$ is better, even though
+$$R_1$$ is much faster for small $$N$$.
+
+Order of Growth
+:   The result of applying our last 3 simplifications gives us the order of
+growth of a function. So for example, suppose $$R(N) = 4N^2 + 3N + 6$$, we'd
+say that the order of growth of $$R(N)$$ is $$N^2$$.
+
+    The terms "constant", "linear", and "quadratic" are often used for
+algorithms with order of growth $$1$$, $$N$$, and $$N^2$$, respectively. For
+example, we might say that an algorithm with runtime $$4N^2 + 3N + 6$$ is
+quadratic.
+
+Simplified Analysis
+:   Once we've chosen a cost function, we can either:
+    - Compute the exact expression that counts the number of operations.
+    - Use intuition and inspection to find the order of growth of the number of operations.
+
+    This latter approach is generally preferable, but requires a lot of
+practice. One common intuitive/inspection-based approach is use geometric
+intuition. For example, if we have nested for loops where i goes from 0 to N,
+and j goes from i + 1 to N, we observe that the runtime is effectively given by
+a right triangle of side length N. Since the area of a such a triangle grows
+quadratically, the order of growth of the runtime is quadratic.
+
+Big-Theta
+:   To formalize our intuitive simplifications, we introduce big-theta
+notation. We say that a function $$R(N) \in \Theta(f(N))$$ if there exists
+positive constants $$k_1$$ and $$k_2$$ such that $$k_1 \cdot f_1(N) \leq R(N)
+\leq k_2 \cdot f_2(N)$$.
+
+    When using $$\Theta$$ to capture a function's asymptotic scaling, we avoid
+unnecessary terms in our $$\Theta$$ expression. For example, while $$4N^2 + 3N +
+6 \in \Theta(4N^2 + 3N)$$, we will usually make the simpler claim that is
+$$4N^2 + 3N + 6 \in \Theta(N^2)$$.
+
+    Big-theta is exactly equivalent to order of growth. That is, if a function
+$$R(N)$$ has order of growth $$N^2$$, then we also have that $$R(N) \in
+\Theta(f(N))$$.
+
+In the final section, we applied what we learned about counting steps,
+estimation, and orders of growth to model algorithmic analysis for larger
+problems. Two techniques, **charting** and **drawing call trees**, helped us
+break down challenging problems into smaller pieces that we could analyze
+individually and recombine to form the final solution.
+
+Below, we will list some tips and formulas that will be handy when you start
+finding the asymptotic runtimes of functions.
+
+### Practical Tips
+
+1. Before attempting to calculate a function's runtime, first try to understand
+   what the function does.
+2. Try some small sample inputs to get a better intuition of what the
+   function's runtime is like. What is the function doing with the input? How
+does the runtime change as the input size increases? Can you spot any 'gotchas'
+in the code that might invalidate our findings for larger inputs?
+3. Try to lower bound and upper bound the function runtime given what you know
+   about how the function works. This is a good sanity check for your later
+observations.
+4. If the function is recursive, draw a call tree to map out the recursive
+   calls. Within each node, denote how much work that specific node does. Then,
+   note the total (sum) work done on each *level*. You should also find the height
+   of the recursive call tree. This breaks the problem down into
+   smaller parts that we can analyze individually. Once each part of the tree has been analyzed, we can then
+   reassemble all the parts to determine the overall runtime of the function.
+5. If the function has a complicated loop, draw a bar chart to map out how much
+   work the body of the loop executes for each iteration.
+6. **Only consider what happens for very large N.** If you see a statement like `if (N < 1) {return 0}` at the top of an algorithm this doesn't mean that we can immediately say the algorithm has a best case runtime in $$\Theta(1)$$. This is a *very* common mistake.
+
+### Useful Formulas
+
+- $$1 + 2 + 3 + 4 + \cdots + N$$ is in $$\Theta(N^2)$$.
+- There are $$N$$ terms in the sequence $$1, 2, 3, 4, \cdots, N$$.
+- $$1 + 2 + 4 + 8 + \cdots + N$$ is in $$\Theta(N)$$.
+- There are $$\log N$$ terms in the sequence $$1, 2, 4, 8, \cdots, N$$.
+- The number of nodes in a complete tree, $$N$$, is approximately $$b^h$$ where
+  $$b$$ is the *branching factor* and $$h$$ is the *height* of the tree.
+- All logarithms are proportional to each other by the Change of Base formula
+  so we can express them generally as just $$\log$$.
+
+It's worth spending a little time proving each of these to yourself with a
+visual model! I personally recommend Desmos or WolframAlpha.
+
+### Deliverables
+
+A quick recap of what you need to do to finish today's lab.
+
+- Look through the `Timer` class and try timing the algorithm in `Sorter.java`
+  for different inputs. Discuss with your neighbors what you
+came up with.
+- Read through the content on asymptotic analysis (big-theta, O, and omega)
+  focusing on how to handle logarithmic, iterative, and recursive algorithms.
+- **Complete the online assessment on Gradescope. There is no coding submission.**
+
